# birdle

./: .gitignore  CMakeLists.txt  README.md  birdle.sln
.github/workflows/: publish.yml
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: BirdleGame.cpp  BirdleGame.h  Window.cpp  Window.h  main.cpp
src/Engine/: App.cpp  App.h
src/Math/: Size.h
src/birdle/: BirdleGame.cs  ColorScheme.cs  Content.cs  GameSettings.cs  Input.cs  Program.cs  README.txt  birdle.csproj  validcheck.py
src/birdle/Audio/: Sound.cs  SoundExtensions.cs
src/birdle/Content/: validcheck.py  wordrepo.txt
src/birdle/Content/Shaders/: Sprite.hlsl
src/birdle/Content/Words/: words5.wb
src/birdle/Data/: GameSettings.cs  QuickConfig.cs
src/birdle/GUI/: Anchor.cs  ColorScheme.cs  Position.cs  UI.cs  UIElement.cs
src/birdle/GUI/Elements/: BirdleGrid.cs  Button.cs  Checkbox.cs  FadeElement.cs  TextElement.cs
src/birdle/GameModes/: BirdleMode.cs  BootMode.cs  Difficulty.cs  FirstLaunchMode.cs  GameMode.cs  MenuMode.cs  SettingsMode.cs
src/birdle/Generators/: IGenerator.cs  WordGenerator.cs
src/birdle/Graphics/: Font.cs  GraphicsExtensions.cs  SpriteRenderer.cs
